possible fix accordion mobile

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -314,6 +314,31 @@ html {
         }
     }
     .wrapper {
+        height: 2000px;
+        @media only screen and (max-width: 991px) {
+            height: 200vh;
+
+            @media only screen and (max-height: 1220px) {
+                height: 220vh;
+            }
+
+            @media only screen and (max-height: 1000px) {
+                height: 200vh;
+            }
+
+            @media only screen and (max-height: 800px) {
+                height: 220vh;
+            }
+
+            @media only screen and (max-height: 700px) {
+                height: 230vh;
+            }
+
+            @media only screen and (max-height: 650px) {
+                height: 1500px;
+            }
+        }
+
         .acc_container {
             #pin1 {
                 height: 100vh;
@@ -619,7 +644,7 @@ html {
                     top: 71px;
 
                     @media only screen and (max-width: 1440px) {
-                        top: 51px;
+                        // top: 51px;
                     }
 
                     @media only screen and (max-width: 1200px) {
